--- a/consumer-order80/src/main/resources/application.yml
+++ b/consumer-order80/src/main/resources/application.yml
@@ -4,3 +4,9 @@ server:
 spring:
   application:
     name: consumer-order80
+
+eureka:
+  client:
+    serviceUrl:
+      #defaultZone: http://localhost:7001/eureka/
+      defaultZone: http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/,http://eureka7004.com:7004/eureka/
