--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
         <module>provider-payment8001</module>
         <module>consumer-order80</module>
         <module>api-commons</module>
+        <module>eureka-server7001</module>
+        <module>eureka-server7002</module>
     </modules>
     <packaging>pom</packaging>
 
