--- a/provider-payment8001/src/main/resources/application.yml
+++ b/provider-payment8001/src/main/resources/application.yml
@@ -13,6 +13,12 @@ spring:
       username: root
       password: 123456
 
+eureka:
+  client:
+    serviceUrl:
+      #defaultZone: http://localhost:7001/eureka/
+      defaultZone: http://localhost:7002/eureka/,http://localhost:7003/eureka/,http://localhost:7004/eureka/
+
 mybatis-plus:
   mapper-locations: classpath:/mapper/*Mapper.xml
   type-aliases-package: com.yzm.commons.entity
