--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
     <artifactId>yzm_springcloud</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>provider-payment8001</module>
-        <module>consumer-order80</module>
+        <module>provider-payment</module>
+        <module>consumer-order</module>
         <module>api-commons</module>
-        <module>eureka-server7001</module>
-        <module>eureka-server7002</module>
+        <module>eureka-server-single</module>
+        <module>eureka-server-cluster</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -130,6 +130,10 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${boot.version}</version>
+                <configuration>
+                    <fork>true</fork><!-- 如果没有该配置，热部署的devtools不生效 -->
+                    <addResources>true</addResources>
+                </configuration>
                 <executions>
                     <execution>
                         <id>repackage</id>
