--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
         <module>gateway-limit</module>
         <module>sleuth-zipkin-consumer-order</module>
         <module>sleuth-zipkin-provider-payment</module>
+        <module>config-server</module>
+        <module>config-client</module>
     </modules>
     <packaging>pom</packaging>
 
