--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,7 @@
     <artifactId>yzm_springcloud</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>eureka-consumer-order</module>
-        <module>eureka-provider-payment</module>
         <module>api-commons</module>
-        <module>eureka-server-single</module>
-        <module>eureka-server-cluster</module>
         <module>zookeeper-consumer-order</module>
         <module>zookeeper-provider-payment</module>
         <module>consul-consumer-order</module>
@@ -26,17 +22,12 @@
         <module>hystrix-consumer-order2</module>
         <module>hystrix-dashboard</module>
         <module>hystrix-turbine</module>
-        <module>gateway-consumer-order</module>
-        <module>gateway-provider-payment</module>
-        <module>gateway-route</module>
-        <module>gateway-predicate</module>
-        <module>gateway-filter</module>
-        <module>gateway-limit</module>
         <module>sleuth-zipkin-consumer-order</module>
         <module>sleuth-zipkin-provider-payment</module>
         <module>config-server</module>
         <module>config-client</module>
         <module>eureka</module>
+        <module>gateway</module>
     </modules>
     <packaging>pom</packaging>
 
