--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <groupId>org.example</groupId>
     <artifactId>yzm_springcloud</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
     <modules>
         <module>api-commons</module>
         <module>config-server</module>
@@ -20,7 +22,6 @@
         <module>zookeeper</module>
         <module>consul</module>
     </modules>
-    <packaging>pom</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -39,6 +40,14 @@
         <lombok.version>1.18.22</lombok.version>
     </properties>
 
+    <!--
+        dependencyManagement：元素来提供了一种管理依赖版本号的方式。
+        能让所有在子项目中引用一个依赖而不用显式的列出版本号。
+        依赖版本升级或切换时，只需修改父工程，不需要一个一个的修改子项目。
+        dependencyManagement里只是声明依赖，并不实现引入，因此子项目需要显示的声明需要用的依赖.
+        如果不在子项目中声明依赖，是不会从父项目中继承下来的:只有在子项目中写了该依赖项，并且没有指定具体版本才会从父项目中继承该项，并且version和scope都读取自父pom;
+        如果子项目中指定了版本号，那么会使用子项目中指定的版本
+    -->
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -61,6 +70,7 @@
                 <version>${alibaba.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+                <optional></optional>
             </dependency>
 
             <dependency>
