--- a/eureka/eureka-consumer-order/src/main/resources/application.yml
+++ b/eureka/eureka-consumer-order/src/main/resources/application.yml
@@ -12,8 +12,10 @@ eureka:
       defaultZone: http://localhost:7001/eureka/
       # 集群版
 #      defaultZone: http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/,http://eureka7004.com:7004/eureka/
+  # 在注册中心的服务实现名称显示
   instance:
     instance-id: eureka-consumer-order:${server.port}
     prefer-ip-address: true
+    # 注册中心的自我保护
     lease-renewal-interval-in-seconds: 2
     lease-expiration-duration-in-seconds: 5
